# pymail

./: .gitignore  README.md  config.json  credentials.json  go.mod  go.sum  mail.go  main.go  main.py  methods.go  model.go  pymail.py  pyproject.toml  token.json  utils.go
src/pymail/: main.py
