[build-system]
requires = ["setuptools >= 67.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymail"
version = "1.1.0"
description = "A small CLI tool to read/write mails."
readme = "README.md"
authors = [{"name" = "Aris Sceznyk", email = "asceznyk@gmail.com"}]
requires-python = ">= 3.10"
dependencies = [
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "rich",
  "typer"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pymail = "pymail.main:cli"

